# ITM-entry-case

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
core/: celery.py  settings.py  urls.py
task/: celery_tasks.py  models.py  serializers.py  urls.py  views.py
task/migrations/: 0001_initial.py
todo/: apps.py  models.py  urls.py
todo/migrations/: 0001_initial.py
